...
    showDialog(
      context: context,
      builder: (context) => KeyboardDialog(
        title: "Global Commands",
        options: [
          DialogOption(
            title: "Show Status",
            icon: Icons.health_and_safety,
            iconColor: Colors.red,
            onTap: () {
              Navigator.pop(context);
              _showStatus();
            },
          ),
          DialogOption(
            title: "Inventory",
            icon: Icons.inventory,
            iconColor: Colors.blue,
            onTap: () {
              Navigator.pop(context);
              _showInventory();
            },
...
